# heat-eqn-1d-variable-coeff

./: .gitignore  CMakeLists.txt  README.txt  crank_nicolson.cpp  create_poisson_matrix.cpp  forward_euler.cpp  plot_stability.m  plot_stability.py  sol_movie.m  sol_movie.py
base_template/: CMakeLists.txt  boundaries.cpp  coefficient_functions.cpp  initial_data.cpp  run_boundaries.cpp  run_stability.cpp
base_template/include/: boundaries.hpp  coefficient_functions.hpp  initial_data.hpp  run_boundaries.hpp  run_stability.hpp  writer.hpp
cmake/: Compiler.cmake  GetEigen.cmake
include/: crank_nicolson.hpp  create_poisson_matrix.hpp  forward_euler.hpp
output/: README.md  forward_euler_boundaries_t_g1.txt  forward_euler_boundaries_u_g0.txt  forward_euler_boundaries_u_g1.txt  forward_euler_boundaries_u_g2.txt  forward_euler_stability_t_a0_dt1.txt  forward_euler_stability_t_a1_dt0.txt  forward_euler_stability_t_a1_dt2.txt  forward_euler_stability_u_a0_dt0.txt  forward_euler_stability_u_a0_dt1.txt  forward_euler_stability_u_a1_dt0.txt  forward_euler_stability_u_a1_dt1.txt  forward_euler_stability_u_a2_dt0.txt  forward_euler_stability_u_a2_dt1.txt
run_files/: CMakeLists.txt  run_boundaries_crank_nicolson.cpp  run_boundaries_forward_euler.cpp  run_stability_crank_nicolson.cpp  run_stability_forward_euler.cpp
unittest/: CMakeLists.txt  test_crank_nicolson.cpp  test_create_poisson_matrix.cpp  test_forward_euler.cpp
